--- a/public/tailwind_patrickdoran.css
+++ b/public/tailwind_patrickdoran.css
@@ -714,7 +714,7 @@ header {
 
 header h1 {
   grid-column: span 2 / span 2;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
   max-width: 1024px;
   padding-right: 9rem;
   font-family: 'league_spartanbold', serif;
@@ -772,8 +772,10 @@ header p {
 
 article {
   min-height: 100vh;
-  padding-left: 16rem;
   padding-top: 3rem;
+  padding-left: 16rem;
+  padding-right: 12rem;
+  padding-bottom: 3rem;
 }
 
 article:nth-child(odd) {
@@ -790,7 +792,7 @@ article h2 {
 }
 
 article h3 {
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.5rem;
   font-family: 'league_spartanbold', serif;
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -798,8 +800,66 @@ article h3 {
 }
 
 article p {
+  margin-bottom: 1.5rem;
+}
+
+article dl {
+  margin-bottom: 2.5rem;
+}
+
+article dt {
+  margin-bottom: 0.5rem;
+  font-family: 'league_spartanbold', serif;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+article dd {
+  margin-right: 1.25rem;
+  display: inline-grid;
+}
+
+article#work{
+  background-color: rgb(0, 0, 0);
+  background-image: radial-gradient(at 100% 28%, rgb(156, 163, 175) 0, transparent 67%), radial-gradient(at 76% 87%, rgb(203, 213, 225) 0, transparent 82%), radial-gradient(at 21% 31%, rgb(4, 120, 87) 0, transparent 73%), radial-gradient(at 65% 22%, rgb(14, 116, 144) 0, transparent 3%), radial-gradient(at 23% 48%, rgb(186, 230, 253) 0, transparent 90%), radial-gradient(at 16% 37%, rgb(120, 53, 15) 0, transparent 1%);
+}
+
+article#work h2 {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+article#work section {
+  margin-bottom: 5rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 1.5rem;
+}
+
+article#work div {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 252 203 / var(--tw-bg-opacity));
+  padding: 1.25rem;
+}
+
+article#work img {
   margin-bottom: 1.25rem;
-  padding-right: 18rem;
+  height: 9rem;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+article#work h4 {
+  margin-bottom: 0.5rem;
+  font-family: 'league_spartanbold', serif;
+  --tw-shadow-color: #f8fafc;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+article#speakingWriting{
+  background-color: rgb(124, 45, 18);
+  background-image: radial-gradient(at 69% 100%, rgb(250, 250, 249) 0, transparent 99%), radial-gradient(at 34% 66%, rgb(234, 179, 8) 0, transparent 58%), radial-gradient(at 28% 31%, rgb(12, 74, 110) 0, transparent 68%), radial-gradient(at 9% 98%, rgb(64, 64, 64) 0, transparent 62%), radial-gradient(at 12% 34%, rgb(254, 252, 232) 0, transparent 53%), radial-gradient(at 78% 52%, rgb(220, 38, 38) 0, transparent 58%);
 }
 
 /*
