--- a/views/home.pug
+++ b/views/home.pug
@@ -57,14 +57,14 @@ html(lang="en")
 
     main
       header
-        h1 Hello, I'm <span>Patrick Doran</span>, a user experience designer and developer from North Carolina.
+        h1 Hello, I'm <span>Patrick Doran</span>, a user experience designer <span>&amp;</span> developer from North Carolina.
       
         picture
           source(srcset="patrick_doran_header_photo.webp" media="(min-width: 600px)" type="image/webp")
           img(src="patrick_doran_header_photo.jpg" title="Photo of Patrick Doran. He's a web developer. In this photo he is wearing sunglasses and smiling")
 
         p Since <time datetime='1998-01'><a target='_blank' href='patrick_doran_work_history.jpg' title="Pepridge Farms remembers">1998 &#x1F4BE;</a></time> I've designed and coded fast user interfaces, modern JavaScript applications, and obsessed about usability and performance. 
-        p Lately, I've focused building with <em>Vue</em>, <em>React</em>, and <em>Tailwind</em> for the Microsoft 365/SharePoint platform.
+        p Lately, I'm focused on building with <em>Vue</em>, <em>React</em>, and <em>Tailwind</em> for the Microsoft 365/SharePoint platform.
         
       
       article(id="work")
@@ -74,24 +74,95 @@ html(lang="en")
 
         h3 Front end development &amp; design 
 
+        section
+          each n in projects
+            div(id=n.id)
+
+              img(loading="lazy" src=n.Image alt="Screenshot from the " + n.Title)
+              h4= n.Title
+
+              em Role: 
+                cite= n.Role
+              p= n.Description
+
+              a(href=n.Link target="_blank")
+                | Link 
+
+              span
+                a(href=n.Repo target="_blank")
+                  | Repo
+
         h3 The Microsoft 365 &amp; SharePoint platform
+          
+        h3 Specializing In
+        dl
+          dt &#x1F6E0;&#xFE0F; Front-End Web Development  &#x1F6E0;&#xFE0F;
+          dd
+            abbr(title='HyperText Markup Language') HTML
+          dd
+            abbr(title='Cascading Style Sheets') CSS
+          dd JavaScript
+          dd Vue
+          dd Tailwind
+          dd React
+          dd Node
+          dd Express
+          dd PHP
+          dd Python
+          dd Svelte 
+          dd 
+            abbr(title='Syntactically Awesome Style Sheets') SASS
+          dd Git
+          dd WordPress
+        dl
+          dt &#x1F5A5;&#xFE0F; User Experience Design  &#x1F5A5;&#xFE0F;
+          dd Prototyping
+          dd Responsive design
+          dd Photoshop
+          dd Illustrator
+          dd Figma
+          dd Mockups
+          dd XD
+          dd Storyboards
+        dl
+          dt &#x1F39B;&#xFE0F; Microsoft 365 &amp; SharePoint  &#x1F39B;&#xFE0F;
+          dd SharePoint 
+          dd #SPFX
+          dd Azure
+          dd Power BI
+          dd Logic Apps
+          dd Teams 
+          dd Nintex
+          dd Power Automate
 
-      article(id="speaking")
-        h2 Speaking engagements
 
-      article(id="writing")
-        h2 Writing
+
+      article(id="speakingWriting")
+        
+        h2(id="speaking") Speaking &amp; Writing
+        
+        h3 Speaking engagements
+        p Talking shop is a favorite pasttime of mine, and talking show so others to learn is a great way to learn yourself. 
         ul(id="svelteComponent")
+
+        h3(id="writing") Writing 
+        h4 For Microsoft Community Content Documentation
+        p To stretch my wings a little, I've written a series of articles on the Microsoft 365/SharePoint platform. Writing technical content for users made me appreciate the effort behind great technical documenation.
+
+
 
       article(id="history")
         h2 Professional History
+
+        p The only <strike>var</strike> const is change.
+          div(id="patrickdorantimeline")
         
 
       article(id="about")
         h2 About
 
           h3 About Patrick Doran 
-
+          p Patrick
 
           h3 About this site
           p PatrickDoran.com has been live on the internet since #{yearSince}. According to the Node server that generated this page, that's close to #{yearsLive} years! PatrickDoran.com is usually in handcrafted HTML, but was for a short time built in unironically with Flash. This particular iteration went live in 2022.
@@ -103,6 +174,11 @@ html(lang="en")
               li This markup is built in Pug, and served via Node and Express.
               li It utilizes fonts already installed on your device, because who has time to wait? 
               li A service worker is utilized in case you go offline. This is a Progessive Web App (PWA).
+          
+      footer
+        span 🖲 
+          em Rolling trackballs near Raleigh, North Carolina. This is at least the 8th iteration of PatrickDoran.com.
+              
     
         
 
@@ -244,70 +320,6 @@ html(lang="en")
           p The only <strike>var</strike> const is change.
           div(id="patrickdorantimeline")
 
-        article
-              h2 About this website
-              p PatrickDoran.com has been live on the internet since #{yearSince}. According to the Node server that generated this page, that's close to #{yearsLive} years! PatrickDoran.com is usually in handcrafted HTML and CSS, but was for a short time built in Flash. This particular iteration went live in 2020.
-              ul 
-                li The CSS styles borrow excessively from 
-                  |
-                  a(href='https://github.com/xz/new.css' target='_blank' rel='noreferrer') New.css
-                  |  a fast, markup-driven attribute-free framework. Looks clean, loads so fast. Go ahead and run Lighthouse on it. I'll wait.
-                li This markup is built in Pug, and served via Node and Express. 
-                li It utilizes fonts already installed on your device, because who has time to wait? 
-                li A service worker is utilized in case you go offline. This is a Progessive Web App (PWA).
-      
-     
-      //- nav
-            
-      //-     h2 Specializing In
-      //-     dl
-      //-       dt &#x1F6E0;&#xFE0F; Front-End Web Development  &#x1F6E0;&#xFE0F;
-      //-       dd
-      //-         abbr(title='HyperText Markup Language') HTML
-      //-       dd
-      //-         abbr(title='Cascading Style Sheets') CSS
-      //-       dd JavaScript
-      //-       dd Vue
-      //-       dd Tailwind
-      //-       dd React
-      //-       dd Node
-      //-       dd Express
-      //-       dd PHP
-      //-       dd Python
-      //-       dd Svelte 
-      //-       dd 
-      //-         abbr(title='Syntactically Awesome Style Sheets') SASS
-      //-       dd Git
-      //-       dd WordPress
-      //-     dl
-      //-       dt &#x1F5A5;&#xFE0F; User Experience Design  &#x1F5A5;&#xFE0F;
-      //-       dd Prototyping
-      //-       dd Responsive design
-      //-       dd Photoshop
-      //-       dd Illustrator
-      //-       dd Figma
-      //-       dd Mockups
-      //-       dd XD
-      //-       dd Storyboards
-      //-     dl
-      //-       dt &#x1F39B;&#xFE0F; Microsoft 365 &amp; SharePoint  &#x1F39B;&#xFE0F;
-      //-       dd SharePoint 
-      //-       dd #SPFX
-      //-       dd Azure
-      //-       dd Power BI
-      //-       dd Logic Apps
-      //-       dd Teams 
-      //-       dd Nintex
-      //-       dd Power Automate
-  
-          //- em Rolling trackballs near Raleigh, North Carolina 
-            //- span 🖲 
-              
-      footer
-        img(src='patrick_doran_web_developer.jpg' width='750' height='311' loading='lazy' alt='Photograph of Patrick Doran')
-        p(class='text-center font-serif')
-          em
-          | This is at least the 8th iteration of PatrickDoran.com.  
 
 
     // script.
