--- a/views/home.pug
+++ b/views/home.pug
@@ -155,14 +155,16 @@ html(lang="en")
         h2 Professional History
 
         p The only <strike>var</strike> const is change.
-          //- div(id="patrickdorantimeline")
+          div(id="patrickDoranReactTimeline")
 
-        
+          
 
       article(id="about")
         h2 About
 
           h3 About Patrick Doran 
+          img(class="w-36 h-36" loading="lazy" alt="photo of Patrick Doran where he's looking a little bored, if I'm behing honnest" src="patrick-doran-looking-too-serious.jpg")
+          em Photo credit, Johnathan Phillips
           p Patrick
 
           h3 About this site
