Add vue component to the mix

--- a/views/home.pug
+++ b/views/home.pug
@@ -148,7 +148,7 @@ html(lang="en")
         h3(id="writing") Writing 
         h4 For Microsoft Community Content Documentation
         p To stretch my wings a little, I've written a series of articles on the Microsoft 365/SharePoint platform. Writing technical content for users made me appreciate the effort behind great technical documenation.
-
+        ul(id="vueComponent")
 
 
       article(id="history")
@@ -328,6 +328,7 @@ html(lang="en")
     // script.
     // if ('serviceWorker' in navigator) { navigator.serviceWorker.register('service-worker.js'); }
     script(defer src='patrickdoran_svelte_bundle.js')
+    script(defer src='patrickdoran_vue_bundle.js')
     script(defer src='patrickdoran_react_timeline.js')
 
     <div class="flex items-center m-2 fixed bottom-0 right-0 border border-gray-400 rounded p-2 bg-gray-300 text-pink-600 text-sm">
